# ai_review

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
ai_review/: cli.py  config.py  core.py  hook.py  init.py  prompts.py  report.py  review.py  types.py  utils.py
