[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-reviewer"
version = "0.1.25"
dependencies = [
    "typer >= 0.9.0",
    "rich >= 13.0.0",
    "openai >= 1.0.0",
    "python-dotenv >= 1.0.0",
    "httpx >= 0.24.0",
]

[project.scripts]
# 命令名 = 模块名:函数名
ai-review = "ai_review.cli:app"
